# jarstrap

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  build.py  main.c  settings.gradle.kts
.github/workflows/: build-linux.yml  build-windows.yml  dependency-submission.yml
buildSrc/: args.py  make.py  patcher.py
src/: alloca.h  ansi.h  debug.h  io.c  io.h  jre.c  jre.h  path.c  path.h  util.c  util.h  version.c  version.h
src/main/java/io/github/wasabithumb/jarstrap/: JARStrap.java
src/main/java/io/github/wasabithumb/jarstrap/asset/: AssetEntity.java  AssetPath.java  AssetSource.java
src/main/java/io/github/wasabithumb/jarstrap/asset/impl/archive/: ArchiveAssetSource.java
src/main/java/io/github/wasabithumb/jarstrap/asset/impl/filesystem/: FilesystemAssetEntity.java  FilesystemAssetSource.java
src/main/java/io/github/wasabithumb/jarstrap/manifest/: ManifestFile.java  ManifestMutator.java  ManifestOperation.java
src/main/java/io/github/wasabithumb/jarstrap/packager/: Packager.java  PackagerArch.java  PackagerState.java
src/main/java/io/github/wasabithumb/jarstrap/packager/error/: PackagerException.java  PackagerIOException.java  PackagerInterruptedException.java
src/main/java/io/github/wasabithumb/jarstrap/packager/stage/: PackagerStage.java
src/main/java/io/github/wasabithumb/jarstrap/packager/stage/impl/: PackagerCmakeStage.java  PackagerExportStage.java  PackagerInferStage.java  PackagerInitStage.java  PackagerInjectStage.java  PackagerMakeStage.java  PackagerManifestStage.java  PackagerMinGWStage.java  PackagerVarsStage.java
src/main/java/io/github/wasabithumb/jarstrap/util/: Optimus.java
src/main/java/io/github/wasabithumb/jarstrap/util/io/: CloseListenerInputStream.java  StreamUtil.java
src/test/java/io/github/wasabithumb/jarstrap/: JARStrapTest.java
tool/: README.md  main.c
tool/archive/: README.md
tool/src/: alloca.h  archive.c  archive.h  debug.c  debug.h  io.c  path.c  util.h
